make the repositories load from ressource and not an absolute path the data